--- a/hutool/pom.xml
+++ b/hutool/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>core</artifactId>
             <version>3.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.biezhi</groupId>
+            <artifactId>TinyPinyin</artifactId>
+            <version>2.0.3.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
