--- a/hutool/pom.xml
+++ b/hutool/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>TinyPinyin</artifactId>
             <version>2.0.3.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.oshi</groupId>
+            <artifactId>oshi-core</artifactId>
+            <version>6.3.2</version>
+        </dependency>
     </dependencies>
 
 </project>
